[gd_scene load_steps=18 format=2]

[ext_resource path="res://main menu.png" type="Texture" id=1]
[ext_resource path="res://Levels/Menu.gd" type="Script" id=2]
[ext_resource path="res://Dichotomy.png" type="Texture" id=3]
[ext_resource path="res://spot.png" type="Texture" id=4]
[ext_resource path="res://light.png" type="Texture" id=5]
[ext_resource path="res://CarterOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://music/lofi_Au07.ogg" type="AudioStream" id=7]
[ext_resource path="res://instructions.png" type="Texture" id=8]

[sub_resource type="Curve" id=1]
min_value = -1.0
_data = [ Vector2( 0, 0 ), 0.0, -0.247272, 0, 0, Vector2( 0.77451, -0.0181818 ), -0.285315, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 0, 0, 100, 0, 100, 27, 0, 27 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 0, 105, 0, 105, 25, 0, 25 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, 0, 105, 0, 105, 25, 0, 25 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 511.5, 299.5 )
scale = Vector2( 0.292189, 0.243145 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 482, -3 )
amount = 100
lifetime = 8.0
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 550, 1 )
gravity = Vector2( 0, 30 )
orbit_velocity_curve = SubResource( 1 )
scale_amount = 0.01
scale_amount_random = 0.01

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 568, -2 )
amount = 100
lifetime = 8.0
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 550, 1 )
gravity = Vector2( 0, 30 )
orbit_velocity_curve = SubResource( 1 )
scale_amount = 0.01
scale_amount_random = 0.01
color = Color( 0, 0, 0, 1 )

[node name="Light" type="Sprite" parent="."]
position = Vector2( 483, 78 )
scale = Vector2( 0.421875, 0.421875 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Light"]
scale = Vector2( 1.45148, 1.45148 )
texture = ExtResource( 5 )
energy = 0.86
shadow_enabled = true
shadow_filter = 4
shadow_filter_smooth = 2.9

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Dichotomy" type="Sprite" parent="CanvasModulate"]
light_mask = 2
position = Vector2( 506, 170 )
scale = Vector2( 0.264919, 0.264919 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Button" type="Button" parent="."]
margin_left = 475.0
margin_top = 268.0
margin_right = 575.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 6 )
text = "Start"

[node name="LightOccluder2D" type="LightOccluder2D" parent="Button"]
occluder = SubResource( 2 )

[node name="Rules" type="Button" parent="."]
margin_left = 455.0
margin_top = 340.0
margin_right = 560.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 7 )
text = "Rules"

[node name="LightOccluder2D" type="LightOccluder2D" parent="Rules"]
occluder = SubResource( 4 )

[node name="Quit" type="Button" parent="."]
margin_left = 475.0
margin_top = 394.0
margin_right = 580.0
margin_bottom = 419.0
hint_tooltip = "WARNING: you will lose all progress in the game if you quit the game"
custom_fonts/font = SubResource( 8 )
text = "Quit"

[node name="LightOccluder2D" type="LightOccluder2D" parent="Quit"]
occluder = SubResource( 3 )

[node name="Rules Panel" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Background" type="ColorRect" parent="Rules Panel"]
margin_right = 1024.0
margin_bottom = 602.0
color = Color( 0.596078, 0.596078, 0.596078, 0.862745 )

[node name="Instructions" type="Sprite" parent="Rules Panel"]
position = Vector2( 322, 293 )
scale = Vector2( 0.178024, 0.178024 )
texture = ExtResource( 8 )

[node name="Node2D" type="Node2D" parent="Rules Panel"]
scale = Vector2( 0.2, 0.2 )

[node name="Label" type="Label" parent="Rules Panel/Node2D"]
margin_left = 3100.0
margin_top = 205.0
margin_right = 4950.0
margin_bottom = 2885.0
custom_fonts/font = SubResource( 5 )
text = "Use the arrow keys or WASD keys to move

To wall jump, you run into a wall holding the jump key

You cannot touch the opposite colour

You can switch colours using the space bar

Press esc to pause the game"
autowrap = true

[node name="Exit" type="Button" parent="Rules Panel"]
margin_left = 449.0
margin_top = 506.0
margin_right = 554.0
margin_bottom = 531.0
custom_fonts/font = SubResource( 9 )
text = "Exit"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="pressed" from="Rules" to="." method="_on_Rules_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Rules Panel/Exit" to="." method="_on_Exit_pressed"]
